<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.6">
  <DUT Name="ProtectRelay_PACE100ST" Id="{e1dd147f-5e48-446b-8f70-422eb3945adc}">
    <Declaration><![CDATA[TYPE ProtectRelay_PACE100ST :
STRUCT   
	
		Thermal_Overload			: REAL ; (* %  0 TO 250                         *)
	//Status                                 (*                                     *)
		Comut						: BOOL ; (* Cell's selector is in remote position    *)
		CB_Close					: BOOL ; (*  Cell is closes                                   *)
		CB_In_Alarm					: BOOL ; (*Cell is in alarm                                     *)
		Trip_Counter				: INT;   (*  Number of trip *)

                                  
		Mesdata 					: ProtectRelay;   (*                                     *)
        
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>