<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.9">
  <POU Name="FB_ProtectRelay_PACE100ST" Id="{650c6e46-1aee-4b95-aa73-0e603a84762e}" SpecialFunc="None">
    <Declaration><![CDATA[FUNCTION_BLOCK FB_ProtectRelay_PACE100ST EXTENDS FB_ProtectRelay_Base
//////////////////
// SEPAM system for High Voltage or Low Voltage Grid Protection . 
//////////////////


VAR_INPUT PERSISTENT
	// Parameters of the Object (instance/model specific) 
	ParamInInterfaceSub						: BOOL := TRUE; // Serial interface RS422/RS485 TYPE (0:EL6021,1:SUB9)
END_VAR

VAR_OUTPUT

END_VAR

VAR_INPUT
	InUnitID            					: DINT;			// (NA)   ID FOR SEPAM S48 Modbus Unit ID. 	

	IN_MesAlarmI0Max_IO								: BOOL;
	IN_MesAlarmIMax_IO								: BOOL;
END_VAR

VAR

	ModbusRTU								: FB_ModbusRTU;
	MesBlock								: ARRAY[1..3] OF ARRAY[1..120] OF WORD;	
	AX_Addr									: ARRAY[1..3] OF UINT 	:= [1200,	1500,	2000];
	AX_Qty									: ARRAY[1..3] OF UINT	:= [2,		2,		3];
	AX_UnitId								: ARRAY[1..3] OF BYTE	:= [1,		1,		1];
	AX_Function								: ARRAY[1..3] OF UINT	:= [4,		4,		4];	
	AX_Priority								: ARRAY[1..3] OF UINT	:= [1,		1,		1];
	AX_bStart								: ARRAY[1..3] OF BOOL;
	AX_TrigRead								: ARRAY[1..3] OF R_trig;
	MbStruct								: ARRAY[1..3] OF Struct_InputRTU;	
	
	KK										: INT;

MesDataExd				AT %Q* 	: ProtectRelay_PACE100ST ;
	
	//M_EVALUATE

	//ClockRead								: BOOL;

END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[]]></ST>
    </Implementation>
    <Method Name="M_AlarmManagement" Id="{9a297cb9-380c-4618-8644-12d7629ed803}">
      <Declaration><![CDATA[METHOD M_AlarmManagement
//////////////////
// Manages Sepam Alarms. Alarms opens HT CB until Sepam manual Reset . Warning Opens CB-L but does not maintain warning
/////////////////

VAR 
	// Method local variables (reinitialized at each cycle) 
	FB_AlarmCodeManager 	: FB_AlarmCodeManager ; 

END_VAR]]></Declaration>
      <Implementation>
        <ST><![CDATA[
// ALARM CODE //
	FB_AlarmCodeManager(
		bAlarm1				:= MesDataExd.MesData.CB_In_Alarm,		// CB in Alarm
		bAlarm2				:= IN_MesAlarmI0Max_IO,					// Max IO Fault
		bAlarm3				:= IN_MesAlarmIMax_IO,						// Max I Fault 
		bAlarm4				:= FALSE,						// 
		bAlarm5				:= FALSE,						//
		bAlarm6				:= FALSE, 						// 
		bAlarm7				:= FALSE, 						// 
		bAlarm8				:= FALSE, 						// 
		bAlarm9				:= FALSE, 						// 
		bAlarm10			:= FALSE, 						// 
		bAlarm11			:= FALSE, 						//
		bAlarm12			:= FALSE, 						// 
		bAlarm13			:= FALSE, 						//
		bAlarm14			:= FALSE, 						//
		bAlarm15			:= FALSE, 						// 
		wAlarmCode			=>MesDataExd.MesData.MesAlarmCode);

// WARNING CODE //
	FB_AlarmCodeManager(
		bAlarm1			:= FALSE,//
		bAlarm2			:= FALSE,//
		bAlarm4			:= FALSE,//
		bAlarm5			:= FALSE,//
		bAlarm6			:= FALSE,// 
		bAlarm7			:= FALSE,// 
		bAlarm8			:= FALSE,// 
		bAlarm9			:= FALSE,// 
		bAlarm10		:= FALSE,// 
		bAlarm11		:= FALSE,// 
		bAlarm12		:= FALSE,// 
		bAlarm13		:= FALSE,// 
		bAlarm14		:= FALSE,// 
		bAlarm15		:= FALSE,// 
		wAlarmCode		=>MesDataExd.MesData.MesWarningCode);

// EVENT CODE //
	FB_AlarmCodeManager(
		bAlarm1			:=FALSE, 		// 
		bAlarm2			:=FALSE, 		// 
		bAlarm3			:=FALSE, 		// 
		bAlarm4			:=FALSE, 		// 
		bAlarm5			:=FALSE, 		//
		bAlarm6			:=FALSE, 		//
		bAlarm7			:=FALSE, 		//
		bAlarm8			:=FALSE, 		//
		bAlarm9			:=FALSE, 		//
		bAlarm10		:=FALSE, 		//
		bAlarm11		:=FALSE, 		//
		bAlarm12		:=FALSE, 		//
		bAlarm13		:=FALSE, 		//
		bAlarm14		:=FALSE, 		//
		bAlarm15		:=FALSE, 		//
		wAlarmCode		=>MesDataExd.MesData.MesEventCode);]]></ST>
      </Implementation>
    </Method>
    <Method Name="M_Evaluate" Id="{7a6f6961-104d-4030-9946-8a7aae221c3e}">
      <Declaration><![CDATA[METHOD M_Evaluate
VAR_INPUT
END_VAR

VAR
	CloseMainMVCB							: BOOL;
	Valtemp									: REAL;
	MesConnectAuthorization					: BOOL;

END_VAR]]></Declaration>
      <Implementation>
        <ST><![CDATA[]]></ST>
      </Implementation>
    </Method>
    <Method Name="M_Init" Id="{234353c0-3ccb-4614-a15d-6c388df90d62}">
      <Declaration><![CDATA[METHOD M_Init
VAR_INPUT
END_VAR
]]></Declaration>
      <Implementation>
        <ST><![CDATA[//Modbus RTU Relay
FOR KK := 1 TO 4 DO 
	MbStruct[KK].InBuffer := ADR(MesBlock[KK]);
	MbStruct[KK].InFunction := AX_Function[KK];
	MbStruct[KK].InQuantity := AX_Qty[KK];
	MbStruct[KK].InStartAddr := AX_Addr[KK];
	MbStruct[KK].InUnitID := AX_UnitId[KK];
END_FOR]]></ST>
      </Implementation>
    </Method>
    <Method Name="M_Read" Id="{c921e8c0-daff-4452-8c08-417837863432}">
      <Declaration><![CDATA[METHOD M_Read
//////////////////
//  Method Calls 
/////////////////

VAR 
//local variables (reinitialized at each cycle) 
	MW 					: FB_MergeWordsToDint; 
	MW_Float			: FB_MergeWordsToFloat; 
END_VAR
]]></Declaration>
      <Implementation>
        <ST><![CDATA[
MesDataExd.MesData.= MesDataExd.MesData.;

IF MesCP_Read THEN	

ModbusRTU();


FOR KK := 1 TO 4 DO
	AX_TrigRead[KK](CLK  :=CalLocalTimeStruct.wSecond MOD 5 = 0);
	IF AX_TrigRead[KK].Q THEN
		ModbusRTU.M_AddAction_FIFO(InStruct := MbStruct[KK], InPriority := AX_Priority[KK]);
	END_IF
END_FOR


MW_Float( WORD_STRONG_F:= MesBlock[1][1], 	WORD_WEAK_F := MesBlock[1][2],  NUMBER_F:= MesDataExd.MesData.MesI1);
MW_Float( WORD_STRONG_F:= MesBlock[1][3], 	WORD_WEAK_F := MesBlock[1][4],  NUMBER_F:= MesDataExd.MesData.MesI2);
MW_Float( WORD_STRONG_F:= MesBlock[1][5], 	WORD_WEAK_F := MesBlock[1][6],  NUMBER_F:= MesDataExd.MesData.MesI3);
MW_Float( WORD_STRONG_F:= MesBlock[1][7], 	WORD_WEAK_F := MesBlock[1][8],  NUMBER_F:= MesDataExd.MesData.MesI0);
MW_Float( WORD_STRONG_F:= MesBlock[1][15], 	WORD_WEAK_F := MesBlock[1][16], NUMBER_F:= MesDataExd.MesData.Thermal_Overload);
MW_Float( WORD_STRONG_F:= MesBlock[1][17], 	WORD_WEAK_F := MesBlock[1][18], NUMBER_F:= MesDataExd.MesData.MesFreq);


MesDataExd.Comut 			:= WORD_TO_BOOL(MesBlock[2][7]);
MesDataExd.CB_Close 		:= WORD_TO_BOOL(MesBlock[2][8]);
MesDataExd.CB_In_Alarm 		:= WORD_TO_BOOL(MesBlock[2][9]);
MesDataExd.Trip_Counter 	:= WORD_TO_INT(MesBlock[3][3]);

END_IF]]></ST>
      </Implementation>
    </Method>
    <LineIds Name="FB_ProtectRelay_PACE100ST">
      <LineId Id="2" Count="0" />
    </LineIds>
    <LineIds Name="FB_ProtectRelay_PACE100ST.M_AlarmManagement">
      <LineId Id="132" Count="0" />
      <LineId Id="5" Count="6" />
      <LineId Id="100" Count="7" />
      <LineId Id="99" Count="0" />
      <LineId Id="13" Count="2" />
      <LineId Id="17" Count="0" />
      <LineId Id="61" Count="2" />
      <LineId Id="65" Count="10" />
      <LineId Id="19" Count="0" />
      <LineId Id="21" Count="1" />
      <LineId Id="34" Count="16" />
      <LineId Id="2" Count="0" />
    </LineIds>
    <LineIds Name="FB_ProtectRelay_PACE100ST.M_Evaluate">
      <LineId Id="55" Count="0" />
    </LineIds>
    <LineIds Name="FB_ProtectRelay_PACE100ST.M_Init">
      <LineId Id="23" Count="6" />
      <LineId Id="5" Count="0" />
    </LineIds>
    <LineIds Name="FB_ProtectRelay_PACE100ST.M_Read">
      <LineId Id="360" Count="0" />
      <LineId Id="363" Count="1" />
      <LineId Id="361" Count="1" />
      <LineId Id="229" Count="0" />
      <LineId Id="326" Count="0" />
      <LineId Id="317" Count="1" />
      <LineId Id="347" Count="1" />
      <LineId Id="320" Count="0" />
      <LineId Id="349" Count="0" />
      <LineId Id="322" Count="0" />
      <LineId Id="324" Count="1" />
      <LineId Id="328" Count="0" />
      <LineId Id="332" Count="1" />
      <LineId Id="329" Count="2" />
      <LineId Id="334" Count="0" />
      <LineId Id="230" Count="1" />
      <LineId Id="281" Count="0" />
      <LineId Id="301" Count="0" />
      <LineId Id="335" Count="0" />
      <LineId Id="367" Count="0" />
      <LineId Id="365" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>